# zoop

./: .gitignore  README.md  flake.nix
engine_build/engine/: zoop_engine.d.ts  zoop_engine.js  zoop_engine_bg.wasm.d.ts
zoop_cli/: copy_assets.sh
zoop_engine/: Cargo.toml  copy_assets.sh
zoop_engine/src/: domain.rs  systems.rs
zoop_engine/src/domain/: car.rs  car_body.rs  controls.rs  frames.rs  game_config.rs  game_set.rs  game_state.rs  ggrs_config.rs  player.rs  tire.rs  trace.rs
zoop_engine/src/services/: websocket.rs
zoop_engine/src/systems/: build_game.rs  build_network.rs  drive_car.rs  manage_scene.rs  read_network_controls.rs  rollback_rapier_context.rs  save_rapier_context.rs
zoop_server/src/: main.rs
zoop_server/src/controllers/: game.rs
zoop_server/src/domain/: users.rs
zoop_shared/: Cargo.toml
zoop_web/: .gitignore  next.config.js
